--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,7 @@ ExportedObj/
 
 # Unity3D generated meta files
 *.pidb.meta
+*.meta
 
 # Unity3D Generated File On Crash Reports
 sysinfo.txt
@@ -28,3 +29,10 @@ sysinfo.txt
 # Builds
 *.apk
 *.unitypackage
+/ProjectSettings
+/Assets/Plugins
+/TacticsReborn_Data/Managed
+/TacticsReborn_Data
+/TacticsReborn.exe
+/player_win_x86.pdb
+*.pdb
